--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <a class="navigation-logo" href="index.html">
           <img class="page-header-logo" alt="Логотип сайта «Седона»" src="#">
         </a>
-        <ul=class="nav__list">
-        <li class="nav__item nav__item-current">
-          <a class="nav__link" href="index.html">Главная</a>
+        <ul class="nav_list">
+        <li class="nav-item nav_item-current">
+          <a class="nav-link" href="index.html">Главная</a>
         </li>
         <li class="navigation-item">
           <a class="navigation-link" href="#">О Седоне</a>
@@ -21,6 +21,21 @@
           <a class="navigation-link" href="catalog.html">Гостиницы</a>
         </li>
       </ul>
+      <ul class="navigation-list navigation-user">
+        <li class="navigation-item">
+          <a class="navigation-link" href="#">
+            <span class="visually-hidden">
+              Поиск
+            </span>
+          </a>
+        </li>
+        <li class="navigation-item">
+        <a class="button button-modal" href="#">Хочу сюда!</a>
+        <!-- <button id="button-modal-id">Хочу сюда!</button> -->
+        </li>
+        </ul>
         </nav>
-      </body>
+  </header>
+
+ </body>
 </html>
