Исправила кнопку поиска по сайту

--- a/index.html
+++ b/index.html
@@ -28,6 +28,21 @@
               Поиск
             </span>
           </a>
+          <!DOCTYPE html>
+<html lang="ru">
+  <head>
+    <meta charset="utf-8">
+    <title>HTML Academy: Седона</title>
+  </head>
+  <body>
+    <header class="page-header">
+      <nav class="navigation">
+        <a class="navigation-logo" href="index.html">
+          <img class="page-header-logo" alt="Логотип сайта «Седона»" src="#">
+        </a>
+        <ul class="nav_list">
+        <li class="nav-item nav_item-current">
+          <a class="nav-link" href="index.html">Главная</a>
         </li>
         <li class="navigation-item">
         <a class="button button-modal" href="#">Хочу сюда!</a>
@@ -35,7 +50,10 @@
         </li>
         </ul>
         </nav>
-  </header>
+</header>
 
- </body>
+
+      </body>
+  </header>
+</body>
 </html>
