Исправила кнопку поиска по сайту

--- a/index.html
+++ b/index.html
@@ -21,29 +21,16 @@
           <a class="navigation-link" href="catalog.html">Гостиницы</a>
         </li>
       </ul>
+      <!-- Потом это будет попап со строкой поиска по сайту -->
       <ul class="navigation-list navigation-user">
         <li class="navigation-item">
-          <a class="navigation-link" href="#">
+          <a class="button button-search" href="#">
             <span class="visually-hidden">
               Поиск
             </span>
           </a>
-          <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
-    <header class="page-header">
-      <nav class="navigation">
-        <a class="navigation-logo" href="index.html">
-          <img class="page-header-logo" alt="Логотип сайта «Седона»" src="#">
-        </a>
-        <ul class="nav_list">
-        <li class="nav-item nav_item-current">
-          <a class="nav-link" href="index.html">Главная</a>
         </li>
+        <!-- Потом это будет модальное окно "Поиск гостиницы в Седоне" -->
         <li class="navigation-item">
         <a class="button button-modal" href="#">Хочу сюда!</a>
         <!-- <button id="button-modal-id">Хочу сюда!</button> -->
@@ -51,9 +38,5 @@
         </ul>
         </nav>
 </header>
-
-
-      </body>
-  </header>
 </body>
 </html>
