Сделана разметка всех страниц

--- a/index.html
+++ b/index.html
@@ -24,14 +24,12 @@
       <ul class="navigation-list navigation-user">
         <li class="navigation-item">
         <!-- Потом это будет попап со строкой поиска по сайту -->
-          <a class="button button-search" href="#">
-            <span class="visually-hidden">
+          <button class="button button-searh" type="button"><span class="visually-hidden">
               Поиск
-            </span>
-          </a>
+            </span></button>
         </li>
         <li class="navigation-item">
-          <a class="button button-favorites" href="#">
+          <a class="button-favorites" href="#">
               <span class="visually-hidden">
                 Избранное
               </span>
@@ -39,7 +37,7 @@
           </li>
         <!-- Потом это будет модальное окно "Поиск гостиницы в Седоне" -->
         <li class="navigation-item">
-        <a class="button button-modal" href="#">Хочу сюда!</a>
+          <button class="button-search-modal" type="button">Хочу сюда!</button>
         </li>
         </ul>
         </nav>
@@ -48,7 +46,7 @@
   <section class="hero">
     <h1>
       <span class="visually-hidden">
-        Добро пожаловать в Седону!
+        Добро пожаловать в Седону! Потому что Гранд-Каньон - отстой!
       </span>
     </h1>
     <div class="welcome">
@@ -113,7 +111,7 @@
   <section class="search-hotels">
     <h2 class="search-hotels">Заинтересовались?</h2>
     <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-    <a class="button-big" href="catalog.html"><span class="visually-hidden">Поиск гостиницы в Седоне</span>ПОИСК ГОСТИНИЦЫ В седоне</a>
+    <a class="search-catalog" href="catalog.html">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</a>
     </section>
     <section class="subscribe">
       <h2 class="subscribe">Подпишитесь на рассылку</h2>
