Разметка всех страниц
Переделала главную страницу в соответствии с замечаниями и в странице каталога внесла изменения в fieldset class="price-filter". Очень прошу посмотреть

--- a/catalog.html
+++ b/catalog.html
@@ -256,45 +256,37 @@
         <button class="button subscribe-button" type="submit">Подписаться</button>
       </form>
 </section>
-<footer class="page-footer">
-<section class="footer-social">
-<h3 class="page-footer-title">
-<span class="visually-hidden">Социальные сети</span>
+<footer>
+<h3 class="title">
+  <span class="visually-hidden">Социальные сети</span>
 </h3>
-    <ul class="footer-social-list">
-      <li class="footer-social-item">
-        <a class="button-social" href="https://vk.com/htmlacademy">
-          <span class="visually-hidden">Вконтакте</span>
-        </a>
-      </li>
-      </ul>
-      <ul class="footer-social-list">
-        <li class="footer-social-item">
-          <a class="button-social" href="https://t.me/htmlacademy">
-            <span class="visually-hidden">Телеграмм</span>
+      <ul class="list-social">
+        <li class="item-social">
+          <a class="button-social" href="https://vk.com/htmlacademy">
+            <span class="visually-hidden">Вконтакте</span>
           </a>
         </li>
-        </ul>
-        <ul class="footer-social-list">
-          <li class="footer-social-item">
-            <a class="button-social" href="https://www.youtube.com/user/">
-              <span class="visually-hidden">Ютуб</span>
+        <li class="item-social">
+          <a class="button-social" href="https://t.me/htmlacademy">
+         <span class="visually-hidden">Телеграмм</span>
             </a>
           </li>
-          </ul>
-</section>
-<section class="footer-contacts">
-<h4 class="page-footer-contacts">
-  <span class="visually-hidden">Телефон</span>
-</h4>
-<a class="footer-contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-</section>
-<h4 class="page-footer-contacts">
+        <li class="item-social">
+              <a class="button-social" href="https://www.youtube.com/user/">
+                <span class="visually-hidden">Ютуб</span>
+              </a>
+                        </li>
+<li class="phone">
+<span class="visually-hidden">Телефон</span>
+<a class="address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+</li>
+</ul>
+<p class="about-text">
+<a href="https://htmlacademy.ru/">
 <span class="visually-hidden">Сайт создан htmlacademy</span>
-</h4>
-<a class="footer-logo" href="https://htmlacademy.ru/">
-<img class="img-footer-logo" alt="Логотип htmlacademy." src="#">
+<img class="about-text-logo" alt="Логотип htmlacademy." src="#">
 </a>
+</p>
 </footer>
 </body>
 </html>
