--- a/2/index.html
+++ b/2/index.html
@@ -11,8 +11,8 @@
         <a class="navigation-logo" href="index.html">
           <img class="page-header-logo" alt="Логотип сайта «Седона»" src="#">
         </a>
-        <ul class="nav_list">
-        <li class="nav-item nav_item-current">
+        <ul class="nav-list">
+        <li class="nav-item nav-item-current">
           <a class="nav-link" href="index.html">Главная</a>
         </li>
         <li class="navigation-item">
@@ -57,11 +57,9 @@
     <img class="hero-image-description" lang="en" src="#" alt="Sedona, because The Grand Canyon suks!">
     </div>
   </section>
-  <section class="advantages-titles">
+  <section class="advantages">
     <h2 class="advantages-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
     <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-  </section>
-<section class="advantages">
   <h2 class="visually-hidden">Преимущества</h2>
   <ul class="advantages-list">
     <li class="advantages-item-wide">
@@ -81,7 +79,7 @@
       <h3 class="advantages-title">Мало туристов</h3>
       <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
       </li>
-<li class="advantages-item-wide2">
+<li class="advantages-item-bridge">
       <h3 class="advantages-title-wide">Там есть мост дьявола</h3>
       <p class="advantages-description-wide">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
       <img class="advantages-img" src="#" alt="Фото моста дьявола">
@@ -94,17 +92,17 @@
   <ul class="advantages-list-card">
 <li class="advantages-card-item">
   <img class="advantages-icon" src="#" alt="Иконка с изображением дома">
-  <h3 class="advantages-title-card">Жильё</h3>
+  <h3 class="advantages-card-title">Жильё</h3>
   <p class="advantages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
   </li>
   <li class="advantages-card-item">
     <img class="advantages-icon" src="#" alt="Иконка с изображением гамбургера">
-    <h3 class="advantages-title-card">Еда</h3>
+    <h3 class="advantages-card-title">Еда</h3>
     <p class="advantages-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
     </li>
     <li class="advantages-card-item">
       <img class="advantages-icon" src="#" alt="Иконка с изображением коробки с подарком">
-      <h3 class="advantages-title-card">Сувениры</h3>
+      <h3 class="advantages-card-title">Сувениры</h3>
       <p class="advantages-description">Не только китайского, но и настоящего местного производства!</p>
       </li>
   </ul>
@@ -123,45 +121,37 @@
       </form>
 </section>
 </main>
-<footer class="page-footer">
-<section class="footer-social">
-<h3 class="page-footer-title">
+<footer>
+<h3 class="title">
   <span class="visually-hidden">Социальные сети</span>
 </h3>
-      <ul class="footer-social-list">
-        <li class="footer-social-item">
+      <ul class="list-social">
+        <li class="item-social">
           <a class="button-social" href="https://vk.com/htmlacademy">
             <span class="visually-hidden">Вконтакте</span>
           </a>
         </li>
-        </ul>
-        <ul class="footer-social-list">
-          <li class="footer-social-item">
-            <a class="button-social" href="https://t.me/htmlacademy">
-              <span class="visually-hidden">Телеграмм</span>
+        <li class="item-social">
+          <a class="button-social" href="https://t.me/htmlacademy">
+         <span class="visually-hidden">Телеграмм</span>
             </a>
           </li>
-          </ul>
-          <ul class="footer-social-list">
-            <li class="footer-social-item">
+        <li class="item-social">
               <a class="button-social" href="https://www.youtube.com/user/">
                 <span class="visually-hidden">Ютуб</span>
               </a>
-            </li>
-            </ul>
-</section>
-<section class="footer-contacts">
-  <h4 class="page-footer-contacts">
-    <span class="visually-hidden">Телефон</span>
-  </h4>
-  <a class="footer-contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-</section>
-<h4 class="page-footer-contacts">
-  <span class="visually-hidden">Сайт создан htmlacademy</span>
-</h4>
-<a class="footer-logo" href="https://htmlacademy.ru/">
-  <img class="img-footer-logo" alt="Логотип htmlacademy." src="#">
+                        </li>
+<li class="phone">
+<span class="visually-hidden">Телефон</span>
+<a class="address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+</li>
+</ul>
+<p class="about-text">
+<a href="https://htmlacademy.ru/">
+<span class="visually-hidden">Сайт создан htmlacademy</span>
+<img class="about-text-logo" alt="Логотип htmlacademy." src="#">
 </a>
+</p>
 </footer>
 </body>
 </html>
