--- a/catalog.html
+++ b/catalog.html
@@ -2,16 +2,17 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Седона. Поиск гостиницы в Седоне</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
+    <title>Седона</title>
   </head>
   <body>
     <header class="page-header">
       <nav class="navigation">
-        <a class="navigation-logo" href="index.html">
-          <img class="page-header-logo" alt="Логотип сайта «Седона»" src="#">
+        <a class="navigation-logo" href="index.html" aria-current="page">
+          <img class="page-header-logo" src="images/log.svg" width="140" height="70" alt="Логотип сайта «Седона».">
         </a>
-        <ul class="nav_list">
-        <li class="nav-item nav_item-current">
+        <ul class="nav-list">
+        <li class="nav-item nav-item-current">
           <a class="nav-link" href="index.html">Главная</a>
         </li>
         <li class="navigation-item">
@@ -21,23 +22,18 @@
           <a class="navigation-link" href="catalog.html">Гостиницы</a>
         </li>
       </ul>
-      <ul class="navigation-list navigation-user">
+      <ul class="navigation-user">
         <li class="navigation-item">
-        <!-- Потом это будет попап со строкой поиска по сайту -->
-          <button class="button button-searh" type="button"><span class="visually-hidden">
-              Поиск
-            </span></button>
-        </li>
+            <a class="navigation-search" href="#">
+            <span class="aria-label">Поиск."></span>
+          </a>
         <li class="navigation-item">
-          <a class="button-favorites" href="#">
-              <span class="visually-hidden">
-                Избранное
-              </span>
-            </a>
-          </li>
-        <!-- Потом это будет модальное окно "Поиск гостиницы в Седоне" -->
+          <a class="navigation-favorite" href="#">
+            <span class="aria-label">Избранное.></span>
+          </a>
+            </li>
         <li class="navigation-item">
-          <button class="button-search-modal" type="button">Хочу сюда!</button>
+          <a class="search-modal" href="catalog.html">Хочу сюда!</a>
         </li>
         </ul>
         </nav>
@@ -47,14 +43,14 @@
     <h1 class="inner-header-title">Гостиницы Седоны</h1>
     <ul class="breadcrumbs">
       <li class="breadcrumbs-item">
-        <a class="breadcrumbs-link" href="index.html"><span class="visually-hidden">ГЛАВНАЯ</span></a>
+        <a class="breadcrumbs-link" href="index.html"><span class="visually-hidden">Главная страница.</span></a>
         </li>
         <li class="breadcrumbs-item">Гостиницы>
       </li>
     </ul>
   </header>
   <section class="filter">
-    <h2 class="visually-hidden">Список гостиниц с фильтрами</h2>
+    <h2 class="visually-hidden">Список гостиниц с фильтрами.</h2>
     <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get"></form>
     <fieldset class="catalog-filter-hotels">
       <legend class="catalog-filter-title">Инфраструктура</legend>
@@ -105,11 +101,11 @@
             <div class="price">
               <fieldset class="price-filter">
                 <legend>Стоимость, ₽::</legend>
-                <label for="min-price"><span class="visually-hidden">минимальная цена</span></label>
+                <label for="min-price"><span class="visually-hidden">минимальная цена.</span></label>
                   <input id="min-price" type="text" placeholder="от" name="min-price">
-                  <label for="max-price"><span class="visually-hidden">максимальная цена</span></label>
+                  <label for="max-price"><span class="visually-hidden">максимальная цена.</span></label>
                   <input id="max-price" type="text" placeholder="до" name="max-price">
-                  <div class="slider">
+                  <div class="slider-range">
                   <input type="range" min="0" max="9000" class="slider" id="range">
                 </div>
                 <div class=button-search><input class="submit" type="submit" value="ПРИМЕНИТЬ">
@@ -143,89 +139,87 @@
       <option value="popular">Сначала популярные</option>
       <option value="expensive">Сначала дорогие</option>
     </select>
-    <button type="button" name="show-card"><span class="visually-hidden">Показать карточки</span>
+    <button type="button" name="show-card"><span class="aria-label">Показать карточки.</span>
     </button>
-    <button type="button" name="show-slide"><span class="visually-hidden">Показать одну на странице</span>
+    <button type="button" name="show-slide"><span class="aria-label">Показать одну на странице.</span>
     </button>
-    <button type="button" name="show-list"><span class="visually-hidden">Показать список</span>
+    <button type="button" name="show-list"><span class="aria-label">Показать список.</span>
     </button>
     </section>
   <section class="hotels">
   <ul class="cards">
     <li class="card">
-      <img class="card-img" src="#" alt="Звездное небо на фоне каньона">
+    <a class="card-image" href="#">
+      <img src="images/hotels/amara.jpg" alt="Звездное небо на фоне каньона.">
+    </a>
+    <a href="#">
       <h3 class="card-title">Amara Resort & Spa</h3>
+    </a>
       <p class="card-description">Гостиница</p>
       <p class="card-price">
         <span class="card-price-value">От 4000 ₽</span>
       </p>
-      <a class="link-card" href="#">ПОДРОБНЕЕ</a>
-      <button class="button-favorite" type="button">В ИЗБРАННОЕ</button>
+      <p><a class="link-card" href="#">ПОДРОБНЕЕ</a></p>
+      <p><button class="select" type="button">В ИЗБРАННОЕ</button></p>
       <p class="stars">
-        <span class="visually-hidden">Количество звезд гостиницы - 4 звезды</span>
-
-        <img src="#" alt="Одна звезда">
-        <img src="#" alt="Вторая звезда">
-        <img src="#" alt="Третья звезда">
-        <img src="#" alt="Четвертая звезда">
-          </p>
-        <!-- Здесь, наверное, инфа тянется откуда-то -->
-          <p class="rate">Рейтинг: 8,5</p>
+        <span class="stars"></span>
+        <span class="visually-hidden">Количество звезд гостиницы - 4 звезды из 5.</span></p>
+        <p class="rate">Рейтинг: 8,5</p>
       </li>
-        <li class="card">
-          <img class="card-img" src="#" alt="Радуга на фоне гор ">
-          <h3 class="card-title">Villas at Poco Diablo</h3>
-          <p class="card-description">Гостиница</p>
-          <p class="card-price">
-            <span class="card-price-value">От 5000 ₽</span>
-          </p>
-          <a class="link-card" href="#">ПОДРОБНЕЕ</a>
-          <button class="button-favorite-current" type="button">В ИЗБРАННОМ</button>
+      <li>
+      <a class="card-image" href="#">
+        <img src="images/hotels/villas.jpg" alt="Радуга на фоне гор.">
+      </a>
+      <a href="#">
+        <h3 class="card-title">Villas at Poco Diablo</h3>
+      </a>
+        <p class="card-description">Гостиница</p>
+        <p class="card-price">
+          <span class="card-price-value">От 5000 ₽</span>
+        </p>
+        <p><a class="link-card" href="#">ПОДРОБНЕЕ</a></p>
+          <button class="selected" type="button">В ИЗБРАННОМ</button>
           <p class="stars">
-            <span class="visually-hidden">Количество звезд гостиницы - 4 звезды</span>
-            <img src="#" alt="Одна звезда">
-            <img src="#" alt="Вторая звезда">
-            <img src="#" alt="Третья звезда">
-            <img src="#" alt="Четвертая звезда">
-              </p>
-            <!-- Здесь, наверное, инфа тянется откуда-то -->
-              <p class="rate">Рейтинг: 8,5</p>
+            <span class="stars"></span>
+            <span class="visually-hidden">Количество звезд гостиницы - 4 звезды из 5.</span></p>
+            <p class="rate">Рейтинг: 9,2</p>
           </li>
           <li class="card">
-            <img class="card-img" src="#" alt="Горы на фоне голубого неба">
-            <h3 class="card-title">Desert Quail Inn</h3>
-            <p class="card-description">Гостиница</p>
-            <p class="card-price">
-              <span class="card-price-value">От 2500 ₽</span>
-            </p>
-            <a class="link-card" href="#">ПОДРОБНЕЕ</a>
-            <button class="button-favorite" type="button">В ИЗБРАННОЕ</button>
-            <p class="stars">
-              <span class="visually-hidden">Количество звезд гостиницы - 3 звезды</span>
-              <img src="#" alt="Одна звезда">
-              <img src="#" alt="Вторая звезда">
-              <img src="#" alt="Третья звезда">
-              </p>
-              <!-- Здесь, наверное, инфа тянется откуда-то -->
-                <p class="rate">Рейтинг: 6,9</p>
-            </li>
-            <li class="card">
-              <img class="card-img" src="#" alt="Горы на фоне звездного неба">
-              <h3 class="card-title">GreenTree Inn</h3>
+            <a class="card-image" href="#">
+              <img src="images/hotels/desert.jpg" alt="Горы на фоне голубого неба.">
+            </a>
+            <a href="#">
+              <h3 class="card-title">Desert Quail Inn</h3>
+            </a>
               <p class="card-description">Гостиница</p>
               <p class="card-price">
-                <span class="card-price-value">От 1500 ₽</span>
+                <span class="card-price-value">От 2500 ₽</span>
               </p>
-              <a class="link-card" href="#">ПОДРОБНЕЕ</a>
-              <button class="button-favorite" type="button">В ИЗБРАННОЕ</button>
+              <p><a class="link-card" href="#">ПОДРОБНЕЕ</a></p>
+              <p><button class="select" type="button">В ИЗБРАННОЕ</button></p>
               <p class="stars">
-                <span class="visually-hidden">Количество звезд гостиницы - 2 звезды</span>
-                <img src="#" alt="Одна звезда">
-                <img src="#" alt="Вторая звезда">
-                </p>
-                <!-- Здесь, наверное, инфа тянется откуда-то -->
-              <p class="rate">Рейтинг: 5,0</p>
+                <span class="stars"></span>
+                <span class="visually-hidden">Количество звезд гостиницы - 3 звезды из 5.</span></p>
+                <p class="rate">Рейтинг: 6,9</p>
               </li>
+              <li class="card">
+                <a class="card-image" href="#">
+                  <img src="images/hotels/green.jpg" alt="Горы на фоне звездного неба.">
+                </a>
+                <a href="#">
+                  <h3 class="card-title">GreenTree Inn</h3>
+                </a>
+                  <p class="card-description">Гостиница</p>
+                  <p class="card-price">
+                    <span class="card-price-value">От 1500 ₽</span>
+                  </p>
+                  <p><a class="link-card" href="#">ПОДРОБНЕЕ</a></p>
+                  <p><button class="select" type="button">В ИЗБРАННОЕ</button></p>
+                  <p class="stars">
+                    <span class="stars"></span>
+                    <span class="visually-hidden">Количество звезд гостиницы - 2 звезды из 5.</span></p>
+                    <p class="rate">Рейтинг: 5,0</p>
+                  </li>
     </ul>
     <ul class="pagination">
     <li class="pagination-item">
@@ -257,36 +251,35 @@
       </form>
 </section>
 <footer>
-<h3 class="title">
-  <span class="visually-hidden">Социальные сети</span>
-</h3>
-      <ul class="list-social">
-        <li class="item-social">
-          <a class="button-social" href="https://vk.com/htmlacademy">
-            <span class="visually-hidden">Вконтакте</span>
-          </a>
-        </li>
-        <li class="item-social">
-          <a class="button-social" href="https://t.me/htmlacademy">
-         <span class="visually-hidden">Телеграмм</span>
+  <h3 class="title">
+    <span class="visually-hidden">Социальные сети</span>
+  </h3>
+        <ul class="list-social">
+          <li class="item-social">
+            <a class="social-button" href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">Вконтакте.</span>
             </a>
           </li>
-        <li class="item-social">
-              <a class="button-social" href="https://www.youtube.com/user/">
-                <span class="visually-hidden">Ютуб</span>
+          <li class="item-social">
+            <a class="social-button" href="https://t.me/htmlacademy">
+              <span class="visually-hidden">Телеграмм.</span>
               </a>
-                        </li>
-<li class="phone">
-<span class="visually-hidden">Телефон</span>
-<a class="address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-</li>
-</ul>
-<p class="about-text">
-<a href="https://htmlacademy.ru/">
-<span class="visually-hidden">Сайт создан htmlacademy</span>
-<img class="about-text-logo" alt="Логотип htmlacademy." src="#">
-</a>
-</p>
-</footer>
-</body>
-</html>
+            </li>
+          <li class="item-social">
+                <a class="social-button" href="https://www.youtube.com/user/">
+                  <span class="visually-hidden">Ютуб.</span>
+                </a>
+          </li>
+  <li class="phone">
+  <span class="visually-hidden">Телефон</span>
+  <a class="address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+  </li>
+  </ul>
+  <p class="about-text">
+  <a href="https://htmlacademy.ru/">
+  <span class="visually-hidden">Сайт создан htmlacademy</span>
+  </a>
+  </p>
+  </footer>
+  </body>
+  </html>
