--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
+    <title>Седона</title>
   </head>
   <body>
     <header class="page-header">
       <nav class="navigation">
-        <a class="navigation-logo" href="index.html">
-          <img class="page-header-logo" alt="Логотип сайта «Седона»" src="#">
+        <a class="navigation-logo" href="index.html" aria-current="page">
+          <img class="page-header-logo" src="images/log.svg" width="140" height="70" alt="Логотип сайта «Седона».">
         </a>
         <ul class="nav-list">
         <li class="nav-item nav-item-current">
@@ -21,23 +22,18 @@
           <a class="navigation-link" href="catalog.html">Гостиницы</a>
         </li>
       </ul>
-      <ul class="navigation-list navigation-user">
+      <ul class="navigation-user">
         <li class="navigation-item">
-        <!-- Потом это будет попап со строкой поиска по сайту -->
-          <button class="button button-searh" type="button"><span class="visually-hidden">
-              Поиск
-            </span></button>
-        </li>
+            <a class="navigation-search" href="#">
+            <span class="aria-label">Поиск."></span>
+          </a>
         <li class="navigation-item">
-          <a class="button-favorites" href="#">
-              <span class="visually-hidden">
-                Избранное
-              </span>
-            </a>
-          </li>
-        <!-- Потом это будет модальное окно "Поиск гостиницы в Седоне" -->
+          <a class="navigation-favorite" href="#">
+            <span class="aria-label">Избранное.></span>
+          </a>
+            </li>
         <li class="navigation-item">
-          <button class="button-search-modal" type="button">Хочу сюда!</button>
+          <a class="search-modal" href="catalog.html">Хочу сюда!</a>
         </li>
         </ul>
         </nav>
@@ -46,15 +42,12 @@
   <section class="hero">
     <h1>
       <span class="visually-hidden">
-        Добро пожаловать в Седону! Потому что Гранд-Каньон - отстой!
+        Добро пожаловать в Седону!
       </span>
     </h1>
     <div class="welcome">
-    <img class="hero-image" src="#" alt="Панорма скал Седоны">
-    <img class="hero-image-description" lang="en" src="#" alt="Welcome">
-    <img class="hero-image-description" lang="en" src="#" alt="to the gorgeous">
-    <img class="hero-image-description" lang="en" src="#" alt="Sedona, because The Grand Canyon suks!">
-    </div>
+    <img class="hero-image-description" src="images/welcome.svg" width="458" height="352" alt="Добро пожаловать в Седону! Потому что Гранд-Каньон - отстой!">
+     </div>
   </section>
   <section class="advantages">
     <h2 class="advantages-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
@@ -64,8 +57,7 @@
     <li class="advantages-item-wide">
       <h3 class="advantages-title-wide">Настоящий городок</h3>
       <p class="advantages-description-wide">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-      <img class="advantages-img" src="#" alt="Вид дома города Седона">
-</li>
+      </li>
 <li class="advantages-item">
       <h3 class="advantages-title">Небольшая площадь</h3>
       <p class="advantages-description">Все достопримечательности находятся очень близко</p>
@@ -81,8 +73,7 @@
 <li class="advantages-item-bridge">
       <h3 class="advantages-title-wide">Там есть мост дьявола</h3>
       <p class="advantages-description-wide">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-      <img class="advantages-img" src="#" alt="Фото моста дьявола">
-</li>
+      </li>
 <li class="advantages-item-service">
   <h2 class="advantages-title-service">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
   <p class="advantages-description-service">Опытный персонал и качественное обслуживание!</p>
@@ -90,17 +81,14 @@
   </ul>
   <ul class="advantages-list-card">
 <li class="advantages-card-item">
-  <img class="advantages-icon" src="#" alt="Иконка с изображением дома">
   <h3 class="advantages-card-title">Жильё</h3>
   <p class="advantages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
   </li>
   <li class="advantages-card-item">
-    <img class="advantages-icon" src="#" alt="Иконка с изображением гамбургера">
     <h3 class="advantages-card-title">Еда</h3>
     <p class="advantages-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
     </li>
     <li class="advantages-card-item">
-      <img class="advantages-icon" src="#" alt="Иконка с изображением коробки с подарком">
       <h3 class="advantages-card-title">Сувениры</h3>
       <p class="advantages-description">Не только китайского, но и настоящего местного производства!</p>
       </li>
@@ -126,20 +114,20 @@
 </h3>
       <ul class="list-social">
         <li class="item-social">
-          <a class="button-social" href="https://vk.com/htmlacademy">
-            <span class="visually-hidden">Вконтакте</span>
+          <a class="social-button" href="https://vk.com/htmlacademy">
+            <span class="visually-hidden">Вконтакте.</span>
           </a>
         </li>
         <li class="item-social">
-          <a class="button-social" href="https://t.me/htmlacademy">
-         <span class="visually-hidden">Телеграмм</span>
+          <a class="social-button" href="https://t.me/htmlacademy">
+            <span class="visually-hidden">Телеграмм.</span>
             </a>
           </li>
         <li class="item-social">
-              <a class="button-social" href="https://www.youtube.com/user/">
-                <span class="visually-hidden">Ютуб</span>
+              <a class="social-button" href="https://www.youtube.com/user/">
+                <span class="visually-hidden">Ютуб.</span>
               </a>
-                        </li>
+        </li>
 <li class="phone">
 <span class="visually-hidden">Телефон</span>
 <a class="address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
@@ -148,7 +136,6 @@
 <p class="about-text">
 <a href="https://htmlacademy.ru/">
 <span class="visually-hidden">Сайт создан htmlacademy</span>
-<img class="about-text-logo" alt="Логотип htmlacademy." src="#">
 </a>
 </p>
 </footer>
