Графика для всех страниц

--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
     <header class="page-header">
       <nav class="navigation">
         <a class="navigation-logo" href="index.html" aria-current="page">
-          <img class="page-header-logo" src="images/log.svg" width="140" height="70" alt="Логотип сайта «Седона»">
+          <img class="page-header-logo" src="images/log.svg" width="140" height="70" alt="Логотип сайта «Седона.»">
         </a>
         <ul class="nav-list">
         <li class="nav-item nav-item-current">
@@ -26,11 +26,11 @@
       <ul class="navigation-user">
         <li class="navigation-item">
             <a class="navigation-search" href="#">
-            <span class="aria-label">Поиск.</span>
+            <span class="aria-label">Поиск</span>
           </a>
         <li class="navigation-item">
           <a class="navigation-favorite" href="#">
-            <span class="aria-label">Избранное.</span>
+            <span class="aria-label">Избранное</span>
           </a>
             </li>
         <li class="navigation-item">
@@ -44,14 +44,14 @@
     <h1 class="inner-header-title">Гостиницы Седоны</h1>
     <ul class="breadcrumbs">
       <li class="breadcrumbs-item">
-        <a class="breadcrumbs-link" href="index.html"><span class="visually-hidden">Переход на главную страницу.</span></a>
+        <a class="breadcrumbs-link" href="index.html"><span class="visually-hidden">Переход на главную страницу</span></a>
         </li>
         <li class="breadcrumbs-item">Гостиницы>
       </li>
     </ul>
   </header>
    <section class="filter">
-    <h2 class="visually-hidden">Список гостиниц с фильтрами.</h2>
+    <h2 class="visually-hidden">Список гостиниц с фильтрами</h2>
     <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get"></form>
     <fieldset class="catalog-filter-hotels">
       <legend class="catalog-filter-title">Инфраструктура</legend>
@@ -102,9 +102,9 @@
             <div class="price">
               <fieldset class="price-filter">
                 <legend>Стоимость, ₽::</legend>
-                <label for="min-price"><span class="visually-hidden">минимальная цена.</span></label>
+                <label for="min-price"><span class="visually-hidden">минимальная цена</span></label>
                   <input id="min-price" type="text" placeholder="от" name="min-price">
-                  <label for="max-price"><span class="visually-hidden">максимальная цена.</span></label>
+                  <label for="max-price"><span class="visually-hidden">максимальная цена</span></label>
                   <input id="max-price" type="text" placeholder="до" name="max-price">
                   <div class="slider-range">
                   <input type="range" min="0" max="9000" class="slider" id="range">
@@ -140,18 +140,18 @@
       <option value="popular">Сначала популярные</option>
       <option value="expensive">Сначала дорогие</option>
     </select>
-    <button type="button" name="show-card"><span class="aria-label">Показать карточки.</span>
+    <button type="button" name="show-card"><span class="aria-label">Показать карточки</span>
     </button>
-    <button type="button" name="show-slide"><span class="aria-label">Показать одну на странице.</span>
+    <button type="button" name="show-slide"><span class="aria-label">Показать одну на странице</span>
     </button>
-    <button type="button" name="show-list"><span class="aria-label">Показать список.</span>
+    <button type="button" name="show-list"><span class="aria-label">Показать список</span>
     </button>
     </section>
   <section class="hotels">
   <ul class="cards">
     <li class="card">
     <a class="card-image" href="#">
-      <img src="images/hotels/amara.jpg" width="300" height="212" alt="Звездное небо на фоне каньона">
+      <img src="images/hotels/amara.jpg" width="300" height="212" alt="Звездное небо на фоне каньона.">
     </a>
     <a href="#">
       <h3 class="card-title">Amara Resort & Spa</h3>
@@ -164,12 +164,12 @@
       <p><button class="select" type="button">В ИЗБРАННОЕ</button></p>
         <p class="stars-4">
         <span class="stars"></span>
-        <span class="visually-hidden">Количество звезд гостиницы - 4 звезды из 5.</span></p>
+        <span class="visually-hidden">Количество звезд гостиницы - 4 звезды из 5</span></p>
         <p class="rate">Рейтинг: 8,5</p>
       </li>
       <li>
       <a class="card-image" href="#">
-        <img src="images/hotels/villas.jpg" width="300" height="212" alt="Радуга на фоне гор">
+        <img src="images/hotels/villas.jpg" width="300" height="212" alt="Радуга на фоне гор.">
       </a>
       <a href="#">
         <h3 class="card-title">Villas at Poco Diablo</h3>
@@ -182,12 +182,12 @@
           <button class="selected" type="button">В ИЗБРАННОМ</button>
           <p class="stars-4">
             <span class="stars-4"></span>
-            <span class="visually-hidden">Количество звезд гостиницы - 4 звезды из 5.</span></p>
+            <span class="visually-hidden">Количество звезд гостиницы - 4 звезды из 5</span></p>
             <p class="rate">Рейтинг: 9,2</p>
           </li>
           <li class="card">
             <a class="card-image" href="#">
-              <img src="images/hotels/desert.jpg" width="300" height="212" alt="Горы на фоне голубого неба">
+              <img src="images/hotels/desert.jpg" width="300" height="212" alt="Горы на фоне голубого неба.">
             </a>
             <a href="#">
               <h3 class="card-title">Desert Quail Inn</h3>
@@ -199,12 +199,12 @@
               <p><a class="link-card" href="#">ПОДРОБНЕЕ</a></p>
               <p><button class="select" type="button">В ИЗБРАННОЕ</button></p>
               <p class="stars-3">
-                <span class="visually-hidden">Количество звезд гостиницы - 3 звезды из 5.</span></p>
+                <span class="visually-hidden">Количество звезд гостиницы - 3 звезды из 5</span></p>
                 <p class="rate">Рейтинг: 6,9</p>
               </li>
               <li class="card">
                 <a class="card-image" href="#">
-                  <img src="images/hotels/green.jpg" width="300" height="212" alt="Горы на фоне звездного неба">
+                  <img src="images/hotels/green.jpg" width="300" height="212" alt="Горы на фоне звездного неба.">
                 </a>
                 <a href="#">
                   <h3 class="card-title">GreenTree Inn</h3>
@@ -216,7 +216,7 @@
                   <p><a class="link-card" href="#">ПОДРОБНЕЕ</a></p>
                   <p><button class="select" type="button">В ИЗБРАННОЕ</button></p>
                   <p class="stars-2">
-                    <span class="visually-hidden">Количество звезд гостиницы - 2 звезды из 5.</span></p>
+                    <span class="visually-hidden">Количество звезд гостиницы - 2 звезды из 5</span></p>
                     <p class="rate">Рейтинг: 5,0</p>
                   </li>
     </ul>
@@ -251,7 +251,7 @@
 </section>
 <footer>
 <h3 class="title">
-    <span class="visually-hidden">Социальные сети.</span>
+    <span class="visually-hidden">Социальные сети</span>
   </h3>
         <!-- <ul class="list-social">
           <li class="item-social">
@@ -274,17 +274,17 @@
         <ul class="list-social">
           <li class="item-social">
             <a class="social-button" href="https://vk.com/htmlacademy">
-              <span class="visually-hidden">Вконтакте.</span>
+              <span class="visually-hidden">Вконтакте</span>
             </a>
           </li>
           <li class="item-social">
             <a class="social-button" href="https://t.me/htmlacademy">
-              <span class="visually-hidden">Телеграмм.</span>
+              <span class="visually-hidden">Телеграмм</span>
               </a>
             </li>
           <li class="item-social">
                 <a class="social-button" href="https://www.youtube.com/user/">
-                  <span class="visually-hidden">Ютуб.</span>
+                  <span class="visually-hidden">Ютуб</span>
                 </a>
           </li>
   <li class="phone">
