--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="page-header">
       <nav class="navigation">
         <a class="navigation-logo" href="index.html" aria-current="page">
-          <img class="page-header-logo" src="images/log.svg" width="140" height="70" alt="Логотип сайта «Седона»">
+          <img class="page-header-logo" src="images/log.svg" width="140" height="70" alt="Логотип сайта «Седона».">
         </a>
         <ul class="nav-list">
         <li class="nav-item nav-item-current">
@@ -26,11 +26,11 @@
       <ul class="navigation-user">
         <li class="navigation-item">
             <a class="navigation-search" href="#">
-            <span class="aria-label">Поиск.</span>
+            <span class="aria-label">Поиск</span>
           </a>
         <li class="navigation-item">
           <a class="navigation-favorite" href="#">
-            <span class="aria-label">Избранное.</span>
+            <span class="aria-label">Избранное</span>
           </a>
             </li>
         <li class="navigation-item">
@@ -111,7 +111,7 @@
 </main>
 <footer>
   <h3 class="title">
-      <span class="visually-hidden">Социальные сети.</span>
+      <span class="visually-hidden">Социальные сети</span>
     </h3>
           <!-- <ul class="list-social">
             <li class="item-social">
@@ -134,17 +134,17 @@
           <ul class="list-social">
             <li class="item-social">
               <a class="social-button" href="https://vk.com/htmlacademy">
-                <span class="visually-hidden">Вконтакте.</span>
+                <span class="visually-hidden">Вконтакте</span>
               </a>
             </li>
             <li class="item-social">
               <a class="social-button" href="https://t.me/htmlacademy">
-                <span class="visually-hidden">Телеграмм.</span>
+                <span class="visually-hidden">Телеграмм</span>
                 </a>
               </li>
             <li class="item-social">
                   <a class="social-button" href="https://www.youtube.com/user/">
-                    <span class="visually-hidden">Ютуб.</span>
+                    <span class="visually-hidden">Ютуб</span>
                   </a>
             </li>
     <li class="phone">
