Сделана сетка крупных элементов главной страницы

--- a/catalog.html
+++ b/catalog.html
@@ -135,7 +135,7 @@
                   </fieldset> -->
         </main>
 <section class="result-search">
-  <h2 class="inner-header-results">Найдено гостиниц: 38</h2>
+  <h2 class="title">Найдено гостиниц: 38</h2>
     <!-- 38 - цифра тянется откуда-то -->
     <select class="select-control" aria-label="Сортировка">
       <option value="cheap">Сначала дешевые</option>
@@ -240,7 +240,7 @@
       </ul>
     </section>
     <section class="subscribe-catalog">
-      <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+      <h2 class="title">Подпишитесь на рассылку</h2>
     <p class="description">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
         <input class="field" placeholder="Ваш e-mail" type="email" name="subscribe-email" id="subscribe-email" required>
